# elmanac

./: .gitignore  LICENSE  README.md  build.hs  elm-package.json  elm.json  elmanac.cabal  elmanach.cabal  stack.yaml
assets/: app-dev.js  index.html  style.css
backend/app/: Main.hs
backend/lib/full-text-search/Data/SearchEngine/: DocIdSet.hs  TermBag.hs
backend/lib/full-text-search/demo/: Main.hs
backend/src/: Elmanach.hs  Utils.hs
backend/test/: Spec.hs
client/src/: Main.elm  Styled.elm  View.elm
design-docs/: 01-status-quo.md  02-room-for-improvement.md  03-harmonic-convergence.md  ZZ-resources.md
elm-aps/: README.md  elm-aps.cabal  stack.yaml
elm-aps/app/: Main.hs
elm-aps/lib/full-text-search/: changelog  full-text-search.cabal
elm-aps/src/: Example.hs
elm-aps/test/: Spec.hs
frontend/src/: App.elm  Main.elm  Styles.elm  Stylesheets.elm  Update.elm  View.elm
server/app/: Main.hs
server/lib/full-text-search/: full-text-search.cabal
server/src/: Elmanac.hs  Elmanach.hs  Elmify.hs
