name:                elm-aps
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/elm-aps#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Example
  other-modules:       Utils
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , text
  default-language:    Haskell2010

executable elm-aps-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , elm-aps
                     , scotty
                     , wai
                     , wai-middleware-static
                     , wai-extra
  default-language:    Haskell2010

test-suite elm-aps-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , elm-aps
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , aeson
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/elm-aps
